--- a/views/visit.erb
+++ b/views/visit.erb
@@ -5,33 +5,24 @@
 
   <div class="form-group">
     <label>Ваше имя</label>
-    <input id='aaa' name='username' type="text" class="form-control" placeholder="Введите ваше имя" value="<%= @username %>">
+    <input name='client[name]' type="text" class="form-control" placeholder="Введите ваше имя">
   </div>
 
   <div class="form-group">
     <label>Ваш телефон</label>
-    <input name='phone' type="text" class="form-control" placeholder="(123) 456-789" value="<%= @phone %>">
+    <input name='client[phone]' type="text" class="form-control" placeholder="(123) 456-789">
   </div>
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name='datetime' type="date" class="form-control" placeholder="Введите дату и время" value="<%= @datetime %>">
+    <input name='client[datestamp]' type="date" class="form-control" placeholder="Введите дату и время">
   </div>
 
-  <div class="form-group">
-    <label>Выберите вашего мастера</label>
-  <select name="barber" class="form-control">
-        
-     <% @barbers.each do |item| %>
-    <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name'] %></option>
-    <% end %>
-
-  </select>
-</div>
+  
   
   <div class="form-group">
     <label>Выберите цвет покраски?</label>
-    <select id="color" name="color">
+    <select id="color" name="client[color]">
   <option value="#7bd148">Green</option>
   <option value="#5484ed">Bold blue</option>
   <option value="#a4bdfc">Blue</option>
