--- a/views/visit.erb
+++ b/views/visit.erb
@@ -5,17 +5,17 @@
 
   <div class="form-group">
     <label>Ваше имя</label>
-    <input name='client[name]' type="text" class="form-control" placeholder="Введите ваше имя">
+    <input name="client[name]" type="text" class="form-control" placeholder="Введите ваше имя" value="">
   </div>
 
   <div class="form-group">
     <label>Ваш телефон</label>
-    <input name='client[phone]' type="text" class="form-control" placeholder="(123) 456-789">
+    <input name="client[phone]" type="text" class="form-control" placeholder="(123) 456-789" value="">
   </div>
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name='client[datestamp]' type="date" class="form-control" placeholder="Введите дату и время">
+    <input name="client[datestamp]" type="date" class="form-control" placeholder="Введите дату и время" value="">
   </div>
 
   
